--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -7,7 +7,7 @@
   },
   "main": "server.ts",
   "scripts": {
-    "start": "node ./server.js",
+    "start": "node www/server.js",
     "start:dev": "node ./www/server.js",
     "tsc": "npx tsc",
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
@@ -30,7 +30,7 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.26.0",
@@ -49,7 +49,7 @@
     "chai-http": "^4.2.1",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^6.1.4",
+    "mocha": "^10.8.2",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^4.2.3"
   }
