--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --openssl-legacy-provider",
     "deploy": "npm install -f && npm run build && chmod +x bin/deploy.sh && bin/deploy.sh",
     "test": "ng test --watch=false",
     "lint": "ng lint",
@@ -25,7 +25,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/cli": "^7.2.0",
     "core-js": "^2.5.4",
+    "eslint": "^9.15.0",
     "rxjs": "~6.5.4",
     "zone.js": "~0.9.1"
   },
