Add engines json for udagram

--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
+  "engines": {
+    "node": "18.20.5",
+    "npm": "10.8.2"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
