--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,11 @@ jobs:
   build:
     docker:
       # the base image can run most needed actions with orbs
-      - image: "cimg/node:14.15"
+      - image: "cimg/base:stable"
     steps:
       # install node and checkout code
       - node/install:
-          node-version: '14.15'
+          node-version: '18.20.5'
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
