--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "frontend:install": "cd udagram/udagram-frontend && npm install -f",
+        "frontend:install": "cd udagram/udagram-frontend && NODE_OPTIONS=--openssl-legacy-provider npm install -f",
         "backend:install": "cd udagram/udagram-api && npm install",
         "frontend:start": "cd udagram/udagram-frontend && npm run start",
         "backend:start": "cd udagram/udagram-api && npm run start",
