--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "frontend:install": "cd udagram/udagram-frontend && npm install -f",
         "backend:install": "cd udagram/udagram-api && npm install",
-        "frontend:start": "cd udagram/udagram-frontend && NODE_OPTIONS=--openssl-legacy-provider npm run start",
+        "frontend:start": "cd udagram/udagram-frontend && npm run start",
         "backend:start": "cd udagram/udagram-api && npm run start",
         "frontend:build": "cd udagram/udagram-frontend && npm run build",
         "frontend:test": "cd udagram/udagram-frontend && npm run test",
