--- a/udagram/.gitignore
+++ b/udagram/.gitignore
@@ -1,2 +1,7 @@
 node_modules
 set_env.sh
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
