--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,16 +65,13 @@ jobs:
       - run:
           name: Setup the secrets and them to EB
           command: |
-            eb setenv \
-            POSTGRES_USERNAME=postgres \
-            POSTGRES_PASSWORD=postgres \
-            POSTGRES_HOST=database1.cofjg5owxo35.us-east-1.rds.amazonaws.com \
-            POSTGRES_DB=postgres \
-            AWS_PROFILE=default \
-            NODE_OPTIONS=--openssl-legacy-provider \
-            JWT_SECRET=mysecretstring \
-            URL=http://localhost:8100 \
-            --environment udagram-api-env01
+            eb setenv POSTGRES_USERNAME=postgres --environment udagram-api-env01
+            eb setenv POSTGRES_PASSWORD=postgres --environment udagram-api-env01
+            eb setenv POSTGRES_DB=postgres --environment udagram-api-env01
+            eb setenv POSTGRES_HOST=database1.cofjg5owxo35.us-east-1.rds.amazonaws.com --environment udagram-api-env01
+            eb setenv AWS_PROFILE=default --environment udagram-api-env01
+            eb setenv JWT_SECRET=mysecretstring --environment udagram-api-env01
+            eb setenv URL=http://localhost:8100 --environment udagram-api-env01
       - run:
           name: Deploy App
           command: |
